  neural network state, and add its high-level API in tetragono.shell.
*** Changed
+ *tetragono*: The function name to create a lattice changes from =create= to =abstract_lattice=. And it is recommended
  to split it into two parts: =abstract_state= to create an abstract state and =abstract_lattice= to convert the
  abstract state into an abstract lattice.
*** Deprecated
+ *tetragono*: The original function name =create= to create lattice is deprecated.
*** Removed
*** Fixed

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.13...v0.2.17][v0.2.17]] - 2022-06-12

*** Added
+ *tetragono*: Add support for changing the hamiltonian of an existent sampling lattice. To do it, create a lattice with
  target hamiltonians and then call =gm_data_load(file_name)= to replace tensors with data stored in file =file_name=.
  For low-level API, =lattice_1._lattice = lattice_2._lattice= could replace tensor data directly.
+ *PyTAT*: Add edge fusing support when contracting two tensors.
+ *TAT.hpp*: Add support for being compiled by MSVC or Intel ICC.
*** Changed
+ *tetragono*: Avoid data files being destroyed if a file system error appears when saving, such as the size limit of
  quota reached.
*** Removed
+ *tetragono*: Submodule =common_variable= is removed, please use =common_tensor= or =common_toolkit= instead.
*** Fixed
+ *TAT.hpp*: Fix selecting the wrong constructor of =Edge= when using two vector iterators to construct =Edge=.
+ *TAT.hpp*: Fix bug when tensor SVD with relative cut cutting nothing.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.12...v0.2.13][v0.2.13]] - 2022-04-26

*** Added
+ *tetragono*: Allow passing function directly instead of module name string of various interface of mid-level API,
  including =restrict= for restricting subspace, =measurement= for measuring values, =initial_configuration= for
  initializing sampling configurations, and =hopping_hamiltonians= for fake hamiltonians used by sweep sampling.