@@ -24,7 +24,7 @@ except:
 import numpy as np
 from ..sampling_lattice import ConfigurationPool
 from ..common_toolkit import (show, allreduce_lattice_buffer, allreduce_buffer, lattice_update, lattice_dot_sum,
-                              lattice_conjugate, mpi_rank)
+                              lattice_conjugate, mpi_rank, mpi_comm)
 from .tensor_element import tensor_element
 
 
@@ -501,6 +501,32 @@ class Observer():
                                                                               self._total_weight)
         return lattice_conjugate(b)
 
+    def _trace_metric(self):
+        """
+        Get the trace of metric used in natural gradient.
+
+        Returns
+        -------
+        float
+            The trace of metric.
+        """
+        # Metric = |Deltas[s]> <Deltas[s]| reweight[s] / total_weight - |Delta> / total_weight <Delta| / total_weight
+        result = 0.0
+        if self._cache_natural_delta:
+            with open(os.path.join(self._cache_natural_delta, str(mpi_rank)), "rb") as file:
+                for reweight, _ in self._Deltas:
+                    deltas = pickle.load(file)
+                    result += lattice_dot_sum(deltas, deltas) * reweight / self._total_weight
+        else:
+            for reweight, deltas in self._Deltas:
+                result += lattice_dot_sum(deltas, deltas) * reweight / self._total_weight
+        result = mpi_comm.allreduce(result)
+
+        delta = np.array(self._Delta) / self._total_weight
+        result -= lattice_dot_sum(delta, delta)
+
+        return result
+
     def _metric_mv(self, gradient, epsilon):
         """
         Product metric tensors and hole tensors, like matrix multiply vector. Metric is generated by Deltas and Delta.
@@ -559,19 +585,23 @@ class Observer():
         # A = metric
         # A x = b
 
+        tr = self._trace_metric()
+        n = sum(t.norm_num() for row in b for t in row)
+        relative_epsilon = epsilon * tr / n
+
         x = np.array([[t.same_shape().zero() for t in row] for row in b])
         # r = b - A@x
-        r = b - self._metric_mv(x, epsilon)
+        r = b - self._metric_mv(x, relative_epsilon)
         # p = r
         p = r
         for t in range(step):
             show(f"conjugate gradient step={t}")
             # alpha = (r @ r) / (p @ A @ p)
-            alpha = lattice_dot_sum(r, r) / lattice_dot_sum(p, self._metric_mv(p, epsilon))
+            alpha = lattice_dot_sum(r, r) / lattice_dot_sum(p, self._metric_mv(p, relative_epsilon))
             # x = x + alpha * p
             x = x + alpha * p
             # new_r = r - alpha * A @ p
-            new_r = r - alpha * self._metric_mv(p, epsilon)
+            new_r = r - alpha * self._metric_mv(p, relative_epsilon)
             # beta = (new_r @ new_r) / (r @ r)
             beta = lattice_dot_sum(new_r, new_r) / lattice_dot_sum(r, r)
             # r = new_r
